--- a/build.gradle
+++ b/build.gradle
@@ -1,48 +1,42 @@
-apply plugin: 'java'
-apply plugin: 'idea'
-apply plugin: 'maven-publish'
-
+plugins {
+    id 'java'
+    id 'idea'
+    id 'maven-publish'
+}
 
 repositories {
     mavenLocal()
     mavenCentral()
 }
 
-group = 'org.java_websocket'
+group = 'org.java-websocket'
 version = '1.4.0-SNAPSHOT'
-sourceCompatibility = 1.6
-targetCompatibility = 1.6
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
 
-configurations {
-    deployerJars
+compileJava {
+    options.compilerArgs += ['-encoding', 'UTF-8']
 }
 
-configure(install.repositories.mavenInstaller) {
-    pom.version = project.version
-    pom.groupId = "org.java_websocket"
-    pom.artifactId = 'Java-WebSocket'
+javadoc {
+    options.encoding = 'UTF-8'
+}
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            groupId = project.group
+            artifactId = 'Java-WebSocket'
+            version = project.version
+
+            from components.java
+        }
+    }
 }
 
 dependencies {
-	deployerJars "org.apache.maven.wagon:wagon-webdav:1.0-beta-2"
-    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
-    testCompile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
-    testCompile group: 'junit', name: 'junit', version: '4.11'
-    testCompile group: 'org.json', name: 'json', version: '20180130'
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+    testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'org.json', name: 'json', version: '20180813'
 }
-
-
-//deploy to maven repository
-//uploadArchives {
-//    repositories.mavenDeployer {
-//        configuration = configurations.deployerJars
-//        repository(url: repositoryUrl) {
-//			authentication(userName: repositoryUsername, password: repositoryPassword)
-//		}
-//    }
-//}
-
-task wrapper(type: Wrapper) {
-    gradleVersion = '1.4'
-}
-
